--- a/Portfolio.html
+++ b/Portfolio.html
@@ -56,21 +56,29 @@
     <section>
         <div class="row">
             <div class="column">
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummyArt1.jpg" alt="Painting of a Mummy" >
-
+                <img src="/Images/CatTatooArt2.webp" alt="Painting of a Mummy" >
+                <img src="/Images/CatLadyArt3.webp" alt="Painting of a Mummy" >
+                <img src="/Images/SkullMothArt4.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/AlienPiramideArt5.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/MummuTatooArt6.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/TwoPakTatooArt7.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/TatooGunTatooArt8.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/LionBladeTatooArt9.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/WendigoTatooArt10.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/SkullShotTatooArt11.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/GreekGodTatooArt12.jpg" alt="Painting of a Mummy" >
+                <img src="/Images/SkullTatooArt12.jpg" alt="Painting of a Mummy" >
             </div>
             <div class="column">
-
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
             <div class="column">
 
