--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <title>Portfolio Website-Brad</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +13,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+    <style>
+        img {width: -20%;
+        height: -20%;}
+    </style>
 </head>
 
 <body style="background-color: black;">
@@ -41,7 +46,7 @@
 
             </div>
         </div>
-        
+
     </nav>
     <section class="bgimage" id="home">
         <div id="AnimationTitle" class="container-fluid">
@@ -56,35 +61,36 @@
     <section>
         <div class="row">
             <div class="column">
-                <img src="/Images/CatTatooArt2.webp" alt="Painting of a Mummy" >
-                <img src="/Images/CatLadyArt3.webp" alt="Painting of a Mummy" >
-                <img src="/Images/SkullMothArt4.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/AlienPiramideArt5.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/MummuTatooArt6.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/TwoPakTatooArt7.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/TatooGunTatooArt8.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/LionBladeTatooArt9.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/WendigoTatooArt10.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/SkullShotTatooArt11.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/GreekGodTatooArt12.jpg" alt="Painting of a Mummy" >
-                <img src="/Images/SkullTatooArt12.jpg" alt="Painting of a Mummy" >
-            </div>
-            <div class="column">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div class="column">
+                <img src="/Images/CatTatooArt2.webp" alt="Painting of a Mummy">
+                <img src="/Images/CatLadyArt3.webp" alt="Painting of a Mummy">
+                <img src="/Images/SkullMothArt4.jpg" alt="Painting of a Mummy">
+                <img src="/Images/AlienPiramideArt5.jpg" alt="Painting of a Mummy">
+                <img src="/Images/MummuTatooArt6.jpg" alt="Painting of a Mummy">
+                <img src="/Images/TwoPakTatooArt7.jpg" alt="Painting of a Mummy">
+                <img src="/Images/TatooGunTatooArt8.jpg" alt="Painting of a Mummy">
+                <img src="/Images/WendigoTatooArt10.jpg" alt="Painting of a Mummy">
+                <img src="/Images/SkullShotTatooArt11.jpg" alt="Painting of a Mummy">
+                <img src="/Images/GreekGodTatooArt12.jpg" alt="Painting of a Mummy">
+                <img src="/Images/SkullTatooArt12.jpg" alt="Painting of a Mummy">
+                <img src="/Images/LionBladeTatooArt9.jpg" alt="Painting of a Mummy">
 
             </div>
             <div class="column">
+                <img src="/Images/ProfilePhoto1.webp" style="filter: saturate(10%)" alt="">
+                <img src="/Images/ProfilePhoto2.webp" style="filter: saturate(1%)" alt="">
+                <img src="/Images/ProfilePhoto3.jpg" alt="">
+                <img src="/Images/ProfilePhoto4.jpg" alt="">
+                <img src="/Images/ProfilePhoto5.jpg" alt="">
+                <img src="/Images/ProfilePhoto6.webp" alt="">
+                <img src="/Images/ProfilePhoto7.webp" tyle="filter: filter: sepia(100%);" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+
+            <div class="column">
 
             </div>
-          </div>
+        </div>
+
     </section>
+    <script src="scripts/script.js"></script>
