Finish on Porfolio page, scrollbar change

--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+    <style>
+        body{
+            background-color: black;
+        }
+        .nav{
+            color:white;
+        }
+    </style>
 </head>
 
-<body style="background-color: black;">
-    <nav style="color: white;" class="navbar navbar-expand-lg fixed-top navbarScroll">
+<body>
+    <nav style="background-color: black;"  class="navbar navbar-expand-lg fixed-top navbarScroll">
         <div class="container">
             <a class="navbar-brand" href="Index.html">Dawid</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -24,9 +32,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="home">
-                <ul class="navbar-nav ms-auto">
+                <ul  class="navbar-nav ms-auto">
 
-                    <li class="nav-item">
+                    <li  class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item">
