--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,8 +14,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
     <style>
-        img {width: -20%;
-        height: -20%;}
+        
     </style>
 </head>
 
@@ -58,8 +57,7 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="row">
+        <div id="row1">
             <div class="column">
                 <img src="/Images/CatTatooArt2.webp" alt="Painting of a Mummy">
                 <img src="/Images/CatLadyArt3.webp" alt="Painting of a Mummy">
@@ -88,9 +86,17 @@
             </div>
 
             <div class="column">
-
+                <img src="/Images/DrawingPyramidGuyArt1.jpg" alt="" srcset="">
+                <img src="/Images/DrawingSelfPortraitDW2.jpg" alt="" srcset="">
+                <img src="/Images/DrawingSpiderRealArt3.jpg" alt="" srcset="">
+                <img src="/Images/DrawingXXXTentancionRealArt4.jpg" alt="" srcset="">
+                <img src="/Images/DrawingPredatorArt5.jpg" alt="" srcset="">
+                <img src="/Images/DrawingSkullArt6.jpg" alt="" srcset="">
+                <img src="/Images/DrawingHandFigureArt7.jpg" alt="" srcset="">
+                <img src="/Images/DrawingLilPeepArt8.jpg" alt="" srcset="">
+                <img src="/Images/DrawingTLOUArt9.jpg" alt="" srcset="">
             </div>
         </div>
 
-    </section>
+
     <script src="scripts/script.js"></script>
