--- a/Index.html
+++ b/Index.html
@@ -27,13 +27,8 @@
     <nav style="background-color: black;" class="navbar navbar-expand-lg fixed-top navbarScroll">
         <div class="container">
             <a class="navbar-brand" href="Index.html">Dawid</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="home">
-                <ul class="navbar-nav ms-auto">
+            <div class="navbar-home"  id="home" >
+                <ul class="navbar-nav ms-auto" style=" vertical-align: left;">
 
                     <li class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
